# multi-tenancy-design-pattern-for-postgres

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic-tenants.ini  alembic.ini  app.py  infra.yml  op_public_schema.sh  op_tenant_schema.sh  pyproject.toml  run_migrations.py
api/: deps.py
api/v1/: api.py
api/v1/endpoints/: tenants.py  users.py
core/: config.py  db.py
crud/: crud_tenant.py  crud_user.py
middlewares/: tenant.py
migrations-tenants/: env.py
migrations-tenants/versions/: 0b5aabfefbc3_init_all_tables.py  3975d850b8e5_add_more_tables_and_columns.py
migrations/versions/: 460885cc8401_create_tenants_table.py
models/: base.py  public.py  tenant.py
schemas/: tenant.py  user.py
